# DamaDamas-icon-theme

./: CMakeLists.txt  README.md  damadamas-installer.py  index.theme
actions/22/: .directory
actions/24/: .directory
apps/scalable/: .directory
categories/start-menu/: .directory
devices/hardware/: office-database
mimetypes/file-types/: .directory
status/toolbar/: .directory
vertical/mimetypes/file-types/: .directory
